Implemented Menu Design🍽️
1. Design, Implement and Link Restaurant Page
2. 8
3. Implemented the menu page design and laid the groundwork for the cart modal.

--- a/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/menu/menu.component.html
@@ -1,3 +1,149 @@
-<p>
-  menu works!
-</p>
+<ion-header collapse="fade">
+    <ion-toolbar>
+        <ion-item>
+            <ion-title class="header">menu</ion-title>
+        </ion-item>
+        <ion-grid style="text-align: center;">
+            <ion-row>
+                <ion-col style="width: 20%;">
+                    <ion-button style="width: 95%; color:#930000" expand="block" fill="outline"
+                        color="#930000">Starters</ion-button>
+                </ion-col>
+
+                <ion-col style="width: 20%;">
+                    <ion-button style="width: 95%; color:#930000" expand="block" fill="outline"
+                        color="#930000">Mains</ion-button>
+                </ion-col>
+
+                <ion-col style="width: 20%;">
+                    <ion-button style="width: 95%; color:#930000" expand="block" fill="outline"
+                        color="#930000">Sides</ion-button>
+                </ion-col>
+
+                <ion-col style="width: 20%;">
+                    <ion-button style="width: 95%; color:#930000" expand="block" fill="outline"
+                        color="#930000">Deserts</ion-button>
+                </ion-col>
+
+                <ion-col style="width: 20%;">
+                    <ion-button style="width: 95%; color:#930000" expand="block" fill="outline" color="#930000"
+                        id="open-modal">My Cart</ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-toolbar>
+</ion-header>
+
+
+<ion-content [fullscreen]="true" class="ion-padding">
+    <div class="ion-padding">
+        <ion-modal trigger="open-modal" [initialBreakpoint]="1" [breakpoints]="[0, 1]">
+            <ng-template>
+                <div class="block">Items in the cart</div>
+            </ng-template>
+        </ion-modal>
+    </div>
+
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col style="display: block;">
+                <img src="../../../../../assets/menu/menu-sample-1.png" style="display: block; margin: auto;">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
+
+
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col>
+                <img src="../../../../../assets/menu/menu-sample-1.png">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col>
+                <img src="../../../../../assets/menu/menu-sample-1.png">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col>
+                <img src="../../../../../assets/menu/menu-sample-1.png">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col>
+                <img src="../../../../../assets/menu/menu-sample-1.png">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col>
+                <img src="../../../../../assets/menu/menu-sample-1.png">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <h2 style="font-family: Abhaya Libre;">Pasta ‘N’ Cheese Salad</h2>
+                <p style="font-family: Montserrat;">Wagyu beef, sake, mirin, soy and kombu, soy-cured egg yolk, wasabi
+                    cream cheese
+                <p style="color: #930000; font-family: Abhaya Libre;">USD 150</p>
+            </ion-col>
+
+            <ion-col>
+                <img src="../../../../../assets/menu/menu-sample-1.png">
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
+</ion-content>
