--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.scss
@@ -25,6 +25,15 @@
     transform: translateX(-50%) translateY(-50%);
 }
 
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
+
 .rooms-header{
     text-transform: uppercase;
     text-align: center;
