--- a/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.html
@@ -1,4 +1,4 @@
-<ion-fab-button (click)="closeModal.emit(true)" class="back-btn">
+<ion-fab-button (click)="closeModal.emit(false)" class="back-btn">
   <ion-icon name="arrow-back-outline"></ion-icon>
 </ion-fab-button>
 <div class="container">
@@ -27,7 +27,7 @@
     <ion-text style="text-align: end;" class="date">{{formatDate(range?.check_out)}}</ion-text>
 
   </div>
-  <div style="text-align: center">
+  <div style="display: flex;">
 
 
     <app-calendar [room_id]="room?.key" (result)="saveBookingRange($event)"></app-calendar>
