--- a/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.scss
@@ -108,10 +108,10 @@
 
     --background: #D6B389;
     width: 150px;
-    text-align: center;
-    bottom: 16px;
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
+    // text-align: center;
+    // bottom: 16px;
+    // left: 50%;
+    // transform: translateX(-50%);
+    // position: absolute;
 
 }
