--- a/Client/Application/src/app/pages/guest/services/browse/browse-services.component.scss
+++ b/Client/Application/src/app/pages/guest/services/browse/browse-services.component.scss
@@ -1,5 +1,5 @@
 .header {
-    
+
     background-image: url('../../../../../assets/services-pics/building.png');
     background-size: cover;
     background-color: #14274A55;
@@ -24,11 +24,31 @@
     transform: translateX(-50%) translateY(-50%);
 }
 
-.activities-header{
+ion-segment {
+
+    --border-radius: 0px;
+    --border: 0px;
+    --background: white;
+
+}
+
+
+ion-segment-button {
+
+    box-shadow: none;
+    --background-focused: transparent;
+    --border-radius-focused: 0;
+    border: none;
+    --indicator-box-shadow: 0;
+    transition: all 250ms ease-in-out;
+}
+
+.activities-header {
     text-transform: uppercase;
     text-align: center;
     font-family: 'Roboto';
     font-weight: 500;
+    font-size: 16px;
+    text-transform: capitalize;
     color: black;
 }
-
