--- a/Client/Application/src/app/components/facilities/facilities.component.scss
+++ b/Client/Application/src/app/components/facilities/facilities.component.scss
@@ -24,5 +24,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.modal {
+
+    width: 100%;
+    height: 100%;
+
+    --background: #d9d9d9d9;
+
+}
+ 
  
 
