--- a/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
+++ b/Client/Application/src/app/pages/guest/profile/profile-modal/profile-modal.component.scss
@@ -110,3 +110,29 @@
 .seats{
     color:#14274A;
 }
+
+
+.options {
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    background-color: transparent;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+
+    // margin: 0px 12px;
+    width: 50%
+}
+
+.date {
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    
+    width: 50%
+}
