--- a/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/room-modal/room-modal.component.html
@@ -1,4 +1,4 @@
-<ion-fab-button (click)="closeModal.emit(false)" class="back-btn">
+<ion-fab-button (click)="closeModal.emit(undefined)" class="back-btn">
   <ion-icon name="arrow-back-outline"></ion-icon>
 </ion-fab-button>
 <div class="container">
