--- a/Client/Application/src/app/pages/settings/settings.component.html
+++ b/Client/Application/src/app/pages/settings/settings.component.html
@@ -1,11 +1,12 @@
 <ion-content>
-
-    <ion-grid style="margin-top: 5vh;">
-      <ion-row>
+  <ion-grid style="margin-top: 5vh;">
+    <ion-row>
       <ion-col size="12" size-md="6">
-        <ion-card >
+        <ion-card>
           <ion-card-header>
-            <ion-card-title>Themes</ion-card-title>
+            <ion-card-title>
+              <ion-icon name="color-palette"></ion-icon> Themes
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
@@ -13,39 +14,49 @@
       <ion-col size="12" size-md="6">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>Languages</ion-card-title>
+            <ion-card-title>
+              <ion-icon name="language"></ion-icon> Languages
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
-      
+
       <ion-col size="12" size-md="6">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>Notifications</ion-card-title>
+            <ion-card-title>
+              <ion-icon name="notifications"></ion-icon> Notifications
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
-      
+
       <ion-col size="12" size-md="6">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>Promo Code</ion-card-title>
+            <ion-card-title>
+              <ion-icon name="pricetag"></ion-icon> Promo Code
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
-      
+
       <ion-col size="12" size-md="6">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>Terms of Service</ion-card-title>
+            <ion-card-title>
+              <ion-icon name="document-text"></ion-icon> Terms of Service
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
-      
+
       <ion-col size="12" size-md="6">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>About</ion-card-title>
+            <ion-card-title>
+              <ion-icon name="information-circle"></ion-icon> About
+            </ion-card-title>
           </ion-card-header>
         </ion-card>
       </ion-col>
