--- a/Client/Application/src/app/components/database/change/change.component.scss
+++ b/Client/Application/src/app/components/database/change/change.component.scss
@@ -33,13 +33,43 @@
 
 .content {
     overflow: hidden;
+    margin: 0;
 }
 
 .half-width {
     width: 50%;
 }
 
+.back-btn {
 
+    margin: 16px;
+    --background: transparent;
+    --color: black;
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+
+}
+
+.container {
+
+
+
+    width: 100%;
+    height: 70%;
+    padding: 8px;
+    overflow-y: auto;
+    border-radius: 40px;
+    background-color: white;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    // text-align: center;
+
+
+}
 
 .padded {
 
@@ -117,9 +147,9 @@ th {
 
 .content {
 
-    padding: 16px;
-    margin: 16px;
-    margin-top: 0px;
+    padding: 0;
+    margin: 0;
+    margin-top: 16px;
 
 }
 
