--- a/Client/Application/src/app/components/database/database.component.html
+++ b/Client/Application/src/app/components/database/database.component.html
@@ -1,100 +1,18 @@
-<div *ngIf="display_hover[1] && ((hover_list && data_injection.hover_fetcher) || 
-  (data_injection.hover_display && data_injection.hover_display(display_hover[1])?.length) || 
-  (data_injection.hover_linker && hover_list?.length))" class="follow-mouse"
-  [style.left]="(mouseX + 16) + 'px'" [style.top]="(mouseY + 16) + 'px'">
+<ion-content fullscreen>
 
+  <app-table-unit [error]="error" [outer_data]="all_data_outer"
+    (download)="dual_fetcher ? loadBothData() : loadPrimaryData()" [loading]="loading"
+    [change_injection]="change_injection" [data_map]="all_data_map" [extra_data_map]="all_extra_map"
+    [data]="all_data" [data_injection]="data_injection" [extra_data]="all_extra"
+    [filtered_data]="filtered_data" (hover)="display_hover = $event"></app-table-unit>
 
-  <div *ngIf="data_injection.hover_display">
-    <div *ngFor="let row of data_injection.hover_display(display_hover[1])">
-      {{row}}
-    </div>
-  </div>
+  <ng-container *ngIf="extra_injection" style="text-align: center;">
 
-  <div *ngIf="data_injection.hover_linker">
-    <div *ngFor="let item of hover_list">
-      {{data_injection.hover_linker.format(item)}}
-    </div>
-  </div>
+    <app-table-unit [error]="error" (download)="dual_fetcher ? loadBothData() : loadSecondaryData()"
+      [loading]="extra_loading" [change_injection]="extra_change_injection"
+      [data_map]="all_extra_map!" [extra_data_map]="undefined" [data]="all_extra!"
+      [data_injection]="extra_injection" [extra_data]="all_extra" [filtered_data]="extra_data!"
+      (hover)="extra_display_hover = $event"></app-table-unit>
 
-
-  <div *ngIf="data_injection.hover_fetcher">
-    <div *ngFor="let item of hover_list">
-      <div *ngFor="let row of data_injection.hover_fetcher.format(item[1])">
-        {{row}}
-      </div>
-    </div>
-  </div>
-
-</div>
-<div
-  *ngIf="extra_display_hover[1] && ((hover_list && extra_injection?.hover_fetcher) || (extra_injection?.hover_display && extra_injection?.hover_display(extra_display_hover[1])?.length))"
-  class="follow-mouse" [style.left]="(mouseX + 16) + 'px'" [style.top]="(mouseY + 16) + 'px'">
-
-  <div *ngIf="extra_injection?.hover_display">
-    <div *ngFor="let row of extra_injection?.hover_display(extra_display_hover[1])">
-      {{row}}
-    </div>
-  </div>
-  <div *ngIf="extra_injection && extra_injection.hover_fetcher">
-    <div *ngFor="let item of extra_list">
-      <div *ngFor="let row of extra_injection.hover_fetcher.format(item[1])">
-        {{row}}
-      </div>
-    </div>
-  </div>
-
-</div>
-
-<table>
-  <tr>
-    <td style="vertical-align: top;">
-      <table style="table-layout: fixed;">
-        <tr>
-
-          <td [style.width]="!extra_injection ? '10%' : '5%'">
-
-          </td>
-          <td style="text-align: center;">
-
-            <app-table-unit [error]="error" [outer_data]="all_data_outer"
-              (download)="dual_fetcher ? loadBothData() : loadPrimaryData()" [loading]="loading"
-              [change_injection]="change_injection" [data_map]="all_data_map"
-              [extra_data_map]="all_extra_map" [data]="all_data" [data_injection]="data_injection"
-              [extra_data]="all_extra" [filtered_data]="filtered_data"
-              (hover)="display_hover = $event"></app-table-unit>
-
-          </td>
-          <td [style.width]="!extra_injection ? '10%' : '5%'">
-
-          </td>
-        </tr>
-      </table>
-    </td>
-    <td *ngIf="extra_loading || (all_extra && extra_data && extra_injection && all_extra_map)"
-      style="vertical-align: top;">
-
-
-      <table style="table-layout: fixed;">
-        <tr>
-
-          <td [style.width]="!extra_injection ? '10%' : '5%'">
-
-          </td>
-          <td *ngIf="extra_injection" style="text-align: center;">
-
-            <app-table-unit [error]="error" (download)="dual_fetcher ? loadBothData() : loadSecondaryData()"
-              [loading]="extra_loading" [change_injection]="extra_change_injection"
-              [data_map]="all_extra_map!" [extra_data_map]="undefined" [data]="all_extra!"
-              [data_injection]="extra_injection" [extra_data]="all_extra"
-              [filtered_data]="extra_data!" (hover)="extra_display_hover = $event"></app-table-unit>
-
-          </td>
-          <td [style.width]="!extra_injection ? '10%' : '5%'">
-
-          </td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-
-</table>
+  </ng-container>
+</ion-content>
