Fixed Bug for Admin Panel📱
1. N/A
2. 10
3. Added function that checks if the user is an admin or has read permissions to then display the admin panel in the burger menu.

--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -45,7 +45,7 @@
       <br>
       <br>
       <br>
-      <ng-container>
+      <ng-container *ngIf="isAdmin()">
         <ion-menu-toggle>
           <ion-text (click)="openAdmin()" class="tabs">
             {{ 'admin_panel' | translate}}
