Implemented the Logout📱
1. N/A
2. 10
3. Added the logout to the burger menu with functionality.

--- a/Client/Application/src/app/tabs/tabs.page.html
+++ b/Client/Application/src/app/tabs/tabs.page.html
@@ -66,8 +66,11 @@
         {{'terms_conditions' | translate}}
       </ion-text>
       <br>
-    
-
+      <ion-menu-toggle>
+      <ion-text class="bottom" (click)="logout()">
+        {{'logout' | translate}}
+      </ion-text>
+    </ion-menu-toggle>
     </div>
   </ion-menu>
 
