--- a/Client/Website/src/app/pages/guest/profile/profile.component.scss
+++ b/Client/Website/src/app/pages/guest/profile/profile.component.scss
@@ -102,7 +102,7 @@
 .orders-container {
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .order-title {
