Initial Database Linking🍽️
1. Design, Implement and Link Restaurant Page
2. 8
3. Transferred the code necessary to display the database food items on the menu page.

--- a/Client/Application/src/app/components/food/food-list-item/food-list-item.component.html
+++ b/Client/Application/src/app/components/food/food-list-item/food-list-item.component.html
@@ -1,3 +1,13 @@
-<p>
-  food-list-item works!
-</p>
+<ion-grid>
+  <ion-row>
+      <ion-col>
+          <h2 style="font-family: Abhaya Libre;">{{food.value.label}}</h2>
+          <p style="font-family: Montserrat;">{{food.value.description}}</p>
+          <p style="color: #930000; font-family: Abhaya Libre;">USD {{food.value.price}}</p>
+      </ion-col>
+
+      <ion-col style="display: block;">
+          <img src="../../../../../assets/menu/menu-sample-1.png" style="display: block; margin: auto;">
+      </ion-col>
+  </ion-row>
+</ion-grid>
