Finalized the Cancel Order Feature🏁
1. N/A
2. 10
3. Fixed the position of the cancel button.

--- a/Client/Website/src/app/services/dialogs/order-overview/order-overview.component.html
+++ b/Client/Website/src/app/services/dialogs/order-overview/order-overview.component.html
@@ -51,6 +51,6 @@
 <div matDialogActions>
   <button class="add-btn" [mat-dialog-close]>{{ 'ok' | translate }}</button>
   <ng-container *ngIf="eligibileCancellation()">
-    <button class="add-btn" [mat-dialog-close]="order?.key">{{ 'cancel' | translate }}</button>
+    <button class="cancel-btn" [mat-dialog-close]="order?.key">{{ 'cancel' | translate }}</button>
   </ng-container>
 </div>
