Improved the design of the Database Page🏁
1. N/A
2. 10
3. Fixed some design idiosyncrasies

--- a/Client/Application/src/app/components/database/blocks/table/table.component.html
+++ b/Client/Application/src/app/components/database/blocks/table/table.component.html
@@ -68,8 +68,7 @@
 
         <tr mat-header-row *matHeaderRowDef="getDisplayedColumnsKey; sticky: true">
         </tr>
-        <tr (mouseenter)="hover.emit(row)" (mouseleave)="hover.emit(['-1', undefined]);"
-            (click)="modify_click.emit(row)" mat-row
+        <tr (click)="modify_click.emit(row)" mat-row
             *matRowDef="let row; columns: getDisplayedColumnsKey;">
         </tr>
         <tr *matNoDataRow>
