--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.scss
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.scss
@@ -1,5 +1,5 @@
 .nav {
-    background-image: url('../../../../../assets/room-main.png');
+    background-image: url('http://localhost:8000/storage/images/Assets/room-main.png');
     background-size: 100% 100%;
     height: 100%;
     background-blend-mode: soft-light;
