Finished System Assets on the Website🏁
1. N/A
2. 10
3. Finished the system assets on the website

--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -18,6 +18,11 @@
             <button [routerLink]="['/admin/food-database']" class="check-btn">{{"Food Database" |
                 translate}}</button>
         </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/image-database']" class="check-btn">{{"Image
+                Database" |
+                translate}}</button>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-3">
@@ -59,6 +64,7 @@
                 Database" |
                 translate}}</button>
         </div>
+
     </div>
 
 
